<?xml version="1.0" encoding="utf-8"?>
<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="@drawable/background"

    >

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="680dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:weightSum="30"
        android:orientation="vertical"
        >
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="35dp"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create your account."
            android:textColor="#868686"
            android:textSize="25dp"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/uplaodimg"
            android:layout_marginLeft="100dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dummy"
            />


        <EditText
            android:id="@+id/username"
            android:layout_weight="2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Enter name"
            android:textColorHint="#868686"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:backgroundTint="#525151"
            />
        <EditText
            android:id="@+id/userage"

            android:layout_weight="3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Age"
            android:textColorHint="#868686"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:backgroundTint="#525151"
            />
        <EditText
            android:id="@+id/usergender"
            android:layout_weight="3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Gender"
            android:textColor="@color/white"
            android:textColorHint="#868686"
            android:textSize="20dp"
            android:backgroundTint="#525151"
            />
        <EditText
            android:id="@+id/userphno"
            android:layout_weight="3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Phone no"
            android:textColor="@color/white"
            android:textColorHint="#868686"
            android:textSize="20dp"
            android:backgroundTint="#525151"
            />
        <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/signupbtn"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/signupbtn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="12dp"
                android:text="Signup"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/loginbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="12dp"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />


        </RelativeLayout>





    </LinearLayout>

</LinearLayout>