<?xml version="1.0" encoding="utf-8"?>
<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="@drawable/background"

    >

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="520dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="200dp"
        android:weightSum="30"
        android:orientation="vertical"
        >
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="35dp"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create your account."
            android:textColor="#868686"
            android:textSize="25dp"
            />
        <EditText
            android:id="@+id/signemail"
            android:layout_weight="4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Email address"
            android:textColorHint="#868686"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:backgroundTint="#525151"
            />
        <EditText
            android:id="@+id/signpass"
            android:layout_marginTop="15dp"
            android:layout_weight="3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textColorHint="#868686"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:backgroundTint="#525151"
            />
        <EditText
            android:id="@+id/signconfirmpass"
            android:layout_weight="3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:textColor="@color/white"
            android:textColorHint="#868686"
            android:textSize="20dp"
            android:backgroundTint="#525151"
            />
        <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/createbtn"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/signupbtn" />
            <TextView
                android:layout_marginTop="12dp"
                android:layout_marginLeft="90dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Profile"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">






        </RelativeLayout>





    </LinearLayout>

</LinearLayout>