...
            />


    </LinearLayout>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drwr"
        android:layout_weight="9.8"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/fragmntcont"
            >

        </FrameLayout>

        <LinearLayout
            android:background="#0D193A"
...
